manually fix broken link in FPWD snapshot
this will otherwise be taken care of by #28

--- a/publication-snapshots/FPWD/Overview.html
+++ b/publication-snapshots/FPWD/Overview.html
@@ -1555,7 +1555,7 @@ var[data-type]:hover::after,var[data-type]:hover::before{opacity:1}
       <a href="https://w3c.github.io/rdf-semantics/spec/#rdf_entail" id="ref-for-index-term-rdf-entailment-1">RDF entailment</a>,
       <a href="https://w3c.github.io/rdf-semantics/spec/#rdfs_entailment" id="ref-for-index-term-rdf-schema-entailment-1">RDF Schema entailment</a>,
       <a href="https://w3c.github.io/rdf-semantics/spec/#D_entailment" id="ref-for-index-term-d-entailment-1">D-Entailment</a>,
-      <a href="https://www.w3.org/TR/owl2-mapping-to-rdf/#Satisfaction.2C_Consistency_and_Entailment" id="ref-for-index-term-owl-2-rdf-based-semantics-entailment-1">OWL 2 RDF-Based Semantics entailment</a>,
+      <a href="https://validator.w3.org/checklink?hide_type=all&depth=&check=Check&uri=https://www.w3.org/TR/2023/WD-sparql12-entailment-20230606/" id="ref-for-index-term-owl-2-rdf-based-semantics-entailment-1">OWL 2 RDF-Based Semantics entailment</a>,
       <a href="https://www.w3.org/TR/owl2-direct-semantics/#Inference_Problems" id="ref-for-index-term-owl-2-direct-semantics-entailment-1">OWL 2 Direct Semantics entailment</a>, and
       <a href="https://www.w3.org/TR/rif-rdf-owl/#def-simple-entails" id="ref-for-index-term-rif-simple-entailment-1">RIF-Simple entailment</a>.</p>
 
@@ -2479,7 +2479,7 @@ ex:s ex:p "+100"^^xsd:short .</code></pre>
             </tr>
             <tr>
               <th>Entailment</th>
-              <td><a href="https://www.w3.org/TR/owl2-rdf-based-semantics/#Satisfaction.2C_Consistency_and_Entailment" id="ref-for-index-term-owl-2-rdf-based-entailment-1">OWL 2 RDF-Based Entailment</a> [<cite><a class="bibref" data-link-type="biblio" href="#bib-owl2-rdf-based-semantics" title="OWL 2 Web Ontology Language RDF-Based Semantics (Second Edition)">OWL2-RDF-BASED-SEMANTICS</a></cite>]</td>
+              <td><a href="https://validator.w3.org/checklink?hide_type=all&depth=&check=Check&uri=https://www.w3.org/TR/2023/WD-sparql12-entailment-20230606/" id="ref-for-index-term-owl-2-rdf-based-entailment-1">OWL 2 RDF-Based Entailment</a> [<cite><a class="bibref" data-link-type="biblio" href="#bib-owl2-rdf-based-semantics" title="OWL 2 Web Ontology Language RDF-Based Semantics (Second Edition)">OWL2-RDF-BASED-SEMANTICS</a></cite>]</td>
             </tr>
             <tr>
               <th>Inconsistency</th>
@@ -3695,7 +3695,7 @@ _:b2 ex:p ex:o</code></pre>and the BGP of the query is
   </li><li>
     <span class="index-term" data-href="https://www.w3.org/TR/owl2-mapping-to-rdf/#Mapping_from_RDF_Graphs_to_the_Structural_Specification" id="index-term-mapping-the-queried-rdf-graph-into-an-owl-2-ontology" tabindex="0" aria-haspopup="dialog">mapping the queried RDF graph into an OWL 2 ontology</span>
   </li><li>
-    <span class="index-term" data-href="https://www.w3.org/TR/owl2-mapping-to-rdf/#Satisfaction.2C_Consistency_and_Entailment" id="index-term-owl-2-rdf-based-semantics-entailment" tabindex="0" aria-haspopup="dialog">OWL 2 RDF-Based Semantics entailment</span>
+    <span class="index-term" data-href="https://validator.w3.org/checklink?hide_type=all&depth=&check=Check&uri=https://www.w3.org/TR/2023/WD-sparql12-entailment-20230606/" id="index-term-owl-2-rdf-based-semantics-entailment" tabindex="0" aria-haspopup="dialog">OWL 2 RDF-Based Semantics entailment</span>
   </li><li>
     <span class="index-term" data-href="https://www.w3.org/TR/owl2-mapping-to-rdf/#Populating_an_Ontology" id="index-term-section-3-2" tabindex="0" aria-haspopup="dialog">Section 3.2</span>
   </li><li>
@@ -4015,7 +4015,7 @@ _:b2 ex:p ex:o</code></pre>and the BGP of the query is
     </div><div class="dfn-panel" hidden="" role="dialog" aria-modal="true" id="dfn-panel-for-index-term-owl-2-rdf-based-semantics-entailment" aria-label="Links in this document to definition: OWL 2 RDF-Based Semantics entailment">
       <span class="caret"></span>
       <div>
-        <a class="self-link" href="https://www.w3.org/TR/owl2-mapping-to-rdf/#Satisfaction.2C_Consistency_and_Entailment" aria-label="Permalink for definition: OWL 2 RDF-Based Semantics entailment. Activate to close this dialog.">Permalink</a>
+        <a class="self-link" href="https://validator.w3.org/checklink?hide_type=all&depth=&check=Check&uri=https://www.w3.org/TR/2023/WD-sparql12-entailment-20230606/" aria-label="Permalink for definition: OWL 2 RDF-Based Semantics entailment. Activate to close this dialog.">Permalink</a>
          
       </div>
       <p><b>Referenced in:</b></p>
