Shows all related documents in `details`.
(Note, build will complain that it is out of sync with the rdf-common repository, until we make it a global change).

--- a/spec/index.html
+++ b/spec/index.html
@@ -361,7 +361,7 @@ span.cancast:hover { background-color: #ffa;
         update of specifications for format and errata.
       </p>
 
-      <section data-include="common/sparql-related.html"></section>
+      <section data-include="common/related.html"></section>
     </section>
     
 <!-- BODY -->
