--- a/spec/common/related.html
+++ b/spec/common/related.html
@@ -1,5 +1,7 @@
 <h4>Set of Documents</h4>
-<p>This document is one of ten RDF 1.2 and twelve SPARQL 1.2 Recommendations produced by the <a href="https://www.w3.org/groups/wg/rdf-star">RDF-star Working Group</a>:</p>
+<p>This document is one of ten RDF 1.2 and twelve SPARQL 1.2 Recommendations produced by the <a href="https://www.w3.org/groups/wg/rdf-star">RDF-star Working Group</a>.</p>
+<details>
+<summary>List of documents</summary>
 
 <p>RDF 1.2 Recommendations:</p>
 <ol>
@@ -12,6 +14,7 @@
   <li data-transform="noSelfCite">[[[RDF12-SEMANTICS]]]</li>
   <li data-transform="noSelfCite">[[[RDF12-TRIG]]]</li>
   <li data-transform="noSelfCite">[[[RDF12-TURTLE]]]</li>
+  <li data-transform="noSelfCite">[[[RDF12-UCR]]]</li>
   <li data-transform="noSelfCite">[[[RDF12-XML]]]</li>
 </ol>
 
@@ -30,3 +33,4 @@
   <li data-transform="noSelfCite">[[[SPARQL12-PROTOCOL]]]</li>
   <li data-transform="noSelfCite">[[[SPARQL12-GRAPH-STORE-PROTOCOL]]]</li>
 </ol>
+</details>
