Documents not recommendations, and correct RDF document count.

--- a/spec/common/sparql-related.html
+++ b/spec/common/sparql-related.html
@@ -1,5 +1,7 @@
 <h4>Set of Documents</h4>
-<p>This document is one of twelve SPARQL 1.2 Recommendations produced by the <a href="https://www.w3.org/groups/wg/rdf-star">RDF-star Working Group</a>:</p>
+<p>This document is one of twelve SPARQL 1.2 documents produced by the <a href="https://www.w3.org/groups/wg/rdf-star">RDF-star Working Group</a>.</p>
+<details>
+<summary>List of documents</summary>
 
 <p>SPARQL 1.2 Recommendations:</p>
 <ol>
@@ -16,3 +18,4 @@
   <li data-transform="noSelfCite">[[[SPARQL12-PROTOCOL]]]</li>
   <li data-transform="noSelfCite">[[[SPARQL12-GRAPH-STORE-PROTOCOL]]]</li>
 </ol>
+</details>
