Reference RDF/SPARQL Documents, not Recommendations.

--- a/spec/common/rdf-related.html
+++ b/spec/common/rdf-related.html
@@ -3,7 +3,7 @@
 <details>
 <summary>List of documents</summary>
 
-<p>RDF 1.2 Recommendations:</p>
+<p>RDF 1.2 Documents:</p>
 <ol>
   <li data-transform="noSelfCite">[[[RDF12-NEW]]]</li>
   <li data-transform="noSelfCite">[[[RDF12-CONCEPTS]]]</li>
