--- a/spec/common/related.html
+++ b/spec/common/related.html
@@ -3,7 +3,7 @@
 <details>
 <summary>List of documents</summary>
 
-<p>RDF 1.2 Recommendations:</p>
+<p>RDF 1.2 Documents:</p>
 <ol>
   <li data-transform="noSelfCite">[[[RDF12-NEW]]]</li>
   <li data-transform="noSelfCite">[[[RDF12-CONCEPTS]]]</li>
@@ -17,7 +17,7 @@
   <li data-transform="noSelfCite">[[[RDF12-XML]]]</li>
 </ol>
 
-<p>SPARQL 1.2 Recommendations:</p>
+<p>SPARQL 1.2 Documents:</p>
 <ol>
   <li data-transform="noSelfCite">[[[SPARQL12-NEW]]]</li>
   <li data-transform="noSelfCite">[[[SPARQL12-CONCEPTS]]]</li>
