--- a/spec/common/sparql-related.html
+++ b/spec/common/sparql-related.html
@@ -3,7 +3,7 @@
 <details>
 <summary>List of documents</summary>
 
-<p>SPARQL 1.2 Recommendations:</p>
+<p>SPARQL 1.2 Documents:</p>
 <ol>
   <li data-transform="noSelfCite">[[[SPARQL12-NEW]]]</li>
   <li data-transform="noSelfCite">[[[SPARQL12-CONCEPTS]]]</li>
